contrast fix

--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ footer {
 }
 a {
   text-decoration: none;
-  color: white !important;
+  color: inherit !important;
 }
 #shareLink {
   position: absolute;
